--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ django:
 #    - 3306:3306
 #  environment:
 #    - MYSQL_ROOT_PASSWORD=password
+#    - MYSQL_DATABASE=my_database
 #postgres:
 #  image: postgres
 #  ports:
